src/snapshots/maudfmt__parser__tests__comments.snap
---
source: src/parser.rs
expression: markup
---
Ok(
    Markup {
        root: Block {
            open_brace: TokenWithTrivia {
                leading_trivia: [],
                token: Token {
                    kind: LBrace,
                    text: "{",
                    span: 0..1,
                },
                trailing_trivia: [
                    Token {
                        kind: Newline,
                        text: "\n",
                        span: 1..2,
                    },
                ],
            },
            nodes: [
                Element(
                    Element {
                        tag: TokenWithTrivia {
                            leading_trivia: [
                                Token {
                                    kind: Whitespace,
                                    text: "            ",
                                    span: 2..14,
                                },
                                Token {
                                    kind: LineComment,
                                    text: "// line comment",
                                    span: 14..29,
                                },
                                Token {
                                    kind: Newline,
                                    text: "\n",
                                    span: 29..30,
                                },
                                Token {
                                    kind: Whitespace,
                                    text: "            ",
                                    span: 30..42,
                                },
                            ],
                            token: Token {
                                kind: Ident,
                                text: "h1",
                                span: 42..44,
                            },
                            trailing_trivia: [
                                Token {
                                    kind: Whitespace,
                                    text: " ",
                                    span: 44..45,
                                },
                            ],
                        },
                        body: Block(
                            Block {
                                open_brace: TokenWithTrivia {
                                    leading_trivia: [],
                                    token: Token {
                                        kind: LBrace,
                                        text: "{",
                                        span: 45..46,
                                    },
                                    trailing_trivia: [
                                        Token {
                                            kind: Whitespace,
                                            text: " ",
                                            span: 46..47,
                                        },
                                        Token {
                                            kind: BlockComment,
                                            text: "/* block comment */",
                                            span: 47..66,
                                        },
                                        Token {
                                            kind: Whitespace,
                                            text: " ",
                                            span: 66..67,
                                        },
                                    ],
                                },
                                nodes: [
                                    Str(
                                        Str(
                                            TokenWithTrivia {
                                                leading_trivia: [],
                                                token: Token {
                                                    kind: Str,
                                                    text: "\"Hello world\"",
                                                    span: 67..80,
                                                },
                                                trailing_trivia: [
                                                    Token {
                                                        kind: Whitespace,
                                                        text: " ",
                                                        span: 80..81,
                                                    },
                                                ],
                                            },
                                        ),
                                    ),
                                ],
                                close_brace: TokenWithTrivia {
                                    leading_trivia: [],
                                    token: Token {
                                        kind: RBrace,
                                        text: "}",
                                        span: 81..82,
                                    },
                                    trailing_trivia: [
                                        Token {
                                            kind: Newline,
                                            text: "\n",
                                            span: 82..83,
                                        },
                                    ],
                                },
                            },
                        ),
                    },
                ),
            ],
            close_brace: TokenWithTrivia {
                leading_trivia: [
                    Token {
                        kind: Whitespace,
                        text: "        ",
                        span: 83..91,
                    },
                ],
                token: Token {
                    kind: RBrace,
                    text: "}",
                    span: 91..92,
                },
                trailing_trivia: [],
            },
        },
    },
)
